--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<!-- Pagina que enseña el listado de estudiantes en formato card (student-card)-->
+<section class="container mt-3">
+    <div class="row">
+        @for (user of arrUsers; track user._id) {
+            <article class="col-6 col-md-4 col-lg-3 gap-0 mb-3">
+                <app-user-card [currentUser]="user"></app-user-card>
+            </article>
+        }@empty {
+            <h4>Ningún resultado para el filtro seleccionado</h4>
+        }
+    </div>
+</section>
