--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
 </header>
 
 <main>
+    <section class="container mt-3">
 
-    <router-outlet />
-    
+        <router-outlet />
+        
+    </section>
 </main>
 
