--- a/src/app/pages/error404/error404.component.html
+++ b/src/app/pages/error404/error404.component.html
@@ -1,1 +1,7 @@
-<p>error404 works!</p>
+
+<div class="container">
+    <img src="../assets/err404.svg" alt="">
+    <h1 class="text-center text-danger mb-3">Uups, algo ha ido mal</h1>
+    <button [routerLink]="['/home']" class="btn btn-outline-danger m-3">Volver al inicio</button>
+</div>
+
