--- a/src/app/pages/error404/error404.component.html
+++ b/src/app/pages/error404/error404.component.html
@@ -2,6 +2,6 @@
 <div class="container">
     <img src="../assets/err404.svg" alt="">
     <h1 class="text-center text-danger mb-3">Uups, algo ha ido mal</h1>
-    <button [routerLink]="['/home']" class="btn btn-outline-danger m-3">Volver al inicio</button>
+    <a [routerLink]="['/home']" class="btn btn-outline-danger m-3">Volver al inicio</a>
 </div>
 
