Añadidos botónes para navegación entre ppaginas

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,4 +1,4 @@
-<!-- FOormulario para la inscipción de nuevos alumnos -->
+<!-- Formulario para la inscipción de nuevos alumnos -->
 
 <div class="container   mb-3">
     <form [formGroup]="inputForm" (ngSubmit)="getDataForm()">
