--- a/src/app/components/user-card/usercard.component.html
+++ b/src/app/components/user-card/usercard.component.html
@@ -1,8 +1,8 @@
 <div class="card shadow">
-    <img src="{{currentUser.image}}" class="rounded-circle shadow m-3" alt="...">
+    <img src="{{currentUser.image}}" class="rounded-circle shadow m-3" alt="{{currentUser.first_name}} {{currentUser.last_name}}">
     <div class="card-body p-2 pt-3">
-        <h6 class="card-title fw-bold text-center">{{currentUser.first_name}} {{currentUser.last_name}}</h6>
-        <div class="d-flex justify-content-between p-2">
+        <h5 class="card-title fw-bold text-center">{{currentUser.first_name}} {{currentUser.last_name}}</h5>
+        <div class="d-flex justify-content-around p-2">
             <div class="d-flex flex-column">
                 <img class="icon" [routerLink]="['/users/', currentUser.username]" src="../assets/user-card.svg" alt="">
                 <p class="text-xs">Detalles</p>
