--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,15 @@
 <!-- Pagina que enseña el listado de estudiantes en formato card (student-card)-->
-
-    <div class="row">
-        @for (user of arrUsers; track user._id) {
-            <article class="col-6 col-md-4 col-lg-3 gap-0 mb-3">
-                <app-user-card [currentUser]="user"></app-user-card>
-            </article>
-        }@empty {
-            <h4>Ningún resultado para el filtro seleccionado</h4>
-        }
-    </div>
+<div class="pages d-flex justify-content-end mb-2 gap-1">
+    <button class="btn btn-outline-secondary btn-sm" (click)="changePage($event)" [class.disabled]="isDisabledPrev" value="prev">-</button>
+    <p class="btn btn-outline-secondary btn-sm">{{this.page}}</p>
+    <button class="btn btn-outline-secondary btn-sm" (click)="changePage($event)" [class.disabled]="isDisabledNext" value="next">+</button>
+</div>    
+<div class="row">
+    @for (user of arrUsers; track user._id) {
+        <article class="col col-12 col-md-4 col-lg-3 gap-0 mb-3">
+            <app-user-card [currentUser]="user"></app-user-card>
+        </article>
+    }@empty {
+        <h4>Ningún resultado</h4>
+    }
+</div>
