--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,12 +10,13 @@
             <app-user-card [currentUser]="user"></app-user-card>
         </article>
     }@empty {
+        @for (i of [1,2,3]; track i ){
         <article class="col col-12 col-md-4 col-lg-3 gap-0 mb-3">
             <div class="col col-12 card placeholder-glow">
                 <img src="..." class="rounded-circle shadow m-3 placeholder" alt="...">
                 <h5 class="placeholder-glow"> <span class="placeholder col-8"></span> </h5>
                 <p class="placeholder-glow"> <span class="placeholder col-10"></span> <p>
                 </div>
-        </article>
+        </article>}
     }
 </div>
