Añadido toggle que esconde el nav al seleccionar elemento

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,18 +1,19 @@
-<nav class="container navbar navbar-expand-lg bg-primary sticky-top" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="https://www.svgrepo.com/show/530661/genetic-data.svg" alt="" width="30" height="24" class="d-inline-block align-text-top bg-light">
+<nav class="container navbar navbar-expand-lg bg-light sticky-top p-0 border-bottom border-secondary border-2" data-bs-theme="light">
+    <div class="container-fluid p-0 ">
+        <a class="navbar-brand p-0" href="#">
+          <img src="https://www.svgrepo.com/show/530661/genetic-data.svg" alt="" height="51.5" class="d-inline-block align-text-top bg-light">
         </a>
+        <h2 class="text-secondary"> Usuarios.com </h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>    
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']" href="/newuser">Nuevo Usuario</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']" href="/newuser" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Nuevo Usuario</a>
               </li>
             </ul>
         </div>
