--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="container navbar navbar-expand-lg bg-light sticky-top p-0 border-bottom border-secondary border-2" data-bs-theme="light">
+<nav class="container navbar navbar-expand-lg bg-light sticky-top p-0 border-bottom border-secondary border-2 shadow" data-bs-theme="light">
     <div class="container-fluid p-0 ">
         <a class="navbar-brand p-0" href="#">
           <img src="https://www.svgrepo.com/show/530661/genetic-data.svg" alt="" height="51.5" class="d-inline-block align-text-top bg-light">
