--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,22 +1,1 @@
-<!-- Pagina que enseña el listado de estudiantes en formato card (student-card)-->
-<div class="pages d-flex justify-content-end mb-2 gap-1">
-    <button class="btn btn-outline-secondary btn-sm" (click)="changePage($event)" [class.disabled]="isDisabledPrev" value="prev">-</button>
-    <p class="d-inline-block p-1">{{this.page}} de {{this.totalPages}}</p>
-    <button class="btn btn-outline-secondary btn-sm" (click)="changePage($event)" [class.disabled]="isDisabledNext" value="next">+</button>
-</div>    
-<div class="row">
-    @for (user of arrUsers; track user._id) {
-        <article class="col col-12 col-md-4 col-lg-3 gap-0 mb-3">
-            <app-user-card [currentUser]="user"></app-user-card>
-        </article>
-    }@empty {
-        @for (i of [1,2,3]; track i ){
-        <article class="col col-12 col-md-4 col-lg-3 gap-0 mb-3">
-            <div class="col col-12 card placeholder-glow">
-                <img src="..." class="rounded-circle shadow m-3 placeholder" alt="...">
-                <h5 class="placeholder-glow"> <span class="placeholder col-8"></span> </h5>
-                <p class="placeholder-glow"> <span class="placeholder col-10"></span> <p>
-                </div>
-        </article>}
-    }
-</div>
+<router-outlet />
