--- a/src/app/components/user-card/usercard.component.html
+++ b/src/app/components/user-card/usercard.component.html
@@ -2,19 +2,6 @@
     <img src="{{currentUser.image}}" class="rounded-circle shadow m-3" alt="{{currentUser.first_name}} {{currentUser.last_name}}">
     <div class="card-body p-2 pt-3">
         <h5 class="card-title fw-bold text-center">{{currentUser.first_name}} {{currentUser.last_name}}</h5>
-        <div class="d-flex justify-content-around p-2">
-            <div class="d-flex flex-column">
-                <img class="icon" [routerLink]="['/home/users/', currentUser._id]" src="../assets/user-card.svg" alt="">
-                <p class="text-xs">Detalles</p>
-            </div>
-            <div class="d-flex flex-column">
-                <img class="icon" [routerLink]="['/updateuser']" src="../assets/update.svg" alt="">
-                <p class="text-xs">Actualizar</p>
-            </div>
-            <div class="d-flex flex-column">
-                <img class="icon" (click)="deleteUser()" src="../assets/trash.svg" alt="">
-                <p class="text-xs">Eliminar</p>
-            </div>
-        </div>
+        <app-buttons [parent]="'userCard'" [currentUserId]="currentUser._id"></app-buttons>
     </div>
 </div>
