Reorganizada la estructura de rutas

--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -17,7 +17,7 @@
         </div>
     }
     <div class="d-flex flex-column ">
-        <a [routerLink]="['/updateuser',currentUserId]" class="d-flex flex-column">
+        <a [routerLink]="['/home/users/updateuser',currentUserId]" class="d-flex flex-column">
             <span class="material-symbols-outlined icon">update</span>
             <p class="text-xs mb-0">Actualizar</p>
         </a>
