--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']" href="/newuser" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Nuevo Usuario</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/users/newuser']" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Nuevo Usuario</a>
               </li>
             </ul>
         </div>
