Añadido comportamiento responsive para el footer

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -4,7 +4,7 @@
           <img src="https://www.svgrepo.com/show/530661/genetic-data.svg" alt="" height="51.5" class="d-inline-block align-text-top bg-light">
         </a>
         <h2 class="text-secondary"> Usuarios.com </h2>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>    
         <div class="collapse navbar-collapse" id="navbarNav">
